--- a/public/css/app.css
+++ b/public/css/app.css
@@ -320,6 +320,11 @@ img.icons {
   display: block;
 }
 
+.error {
+    color: red;
+    margin-bottom: 1em;
+}
+
 @media (max-width: 700px) {
   .left-box {
     width: 100%;
