--- a/public/css/app.css
+++ b/public/css/app.css
@@ -228,24 +228,24 @@
 }
 
 .bottom-links {
-  margin-right: 1.5em;
-  float: left;
-  border: 2px solid black;
-  padding: .5em 2em .5em 2em;
-  color: #2e2e2e;
-  font-weight: bold;
-  background-color: #f4f4f4;
-  cursor: pointer;
-  -webkit-transition: background-color 1s;
-  -moz-transition: background-color 1s;
-  -ms-transition: background-color 1s;
-  -o-transition: background-color 1s;
-  transition: background-color 1s;
-}
+    margin-right: 1.5em;
+    float: left;
+    border: 2px solid #000;
+    padding: 0.5em 2em;
+    color: #2E2E2E;
+    font-weight: bold;
+    background-color: #F4F4F4;
+    cursor: pointer;
+    transition: background-color 1s ease 0s;
+  }
 
 .bottom-links:hover {
   background-color: #2e2e2e;
   color: white;
+}
+.bottom-links.base--a {
+    color: #2E2E2E;
+    text-decoration: none;
 }
 
 img.icons {
