Added morgan and error handler

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="ct" content="<$= ct $>">
+  <meta name="ct" content="<$= locals.ct $>">
   <meta property="og:image" content="/images/app.png" />
   <meta property="og:title" content="AlchemyLanguage demo" />
   <meta property="og:description" content="AlchemyLanguage is a collection of APIs that offer text analysis through natural language processing. This set of APIs can analyze text to help you understand its concepts, entities, keywords, sentiment, and more." />
