updated footer links html
added footer html to consistent for all demos.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -629,21 +629,17 @@
       </div>
 
     </div>
-    <div class="_demo--banner bottom-banner ">
-
-      <div class="footer-banner">
-        <div class="_demo--container footer-container">
-          <div class="footer-title">Next Up: Build your own app</div>
-
-          <div class="footer-tagline">Use AlchemyLanguage to get started.</div>
-
-          <div class="base--a bottom-links" href="https://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/alchemy-language/api/v1/">API Reference</div>
-          <div class="base--a bottom-links" href="https://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/alchemy-language.html">Documentation</div>
-          <div class="base--a bottom-links" href="https://github.com/watson-developer-cloud/alchemylanguage-nodejs">Fork on Github</div>
-          <div class="base--a bottom-links" href="https://bluemix.net/deploy?repository=https://github.com/watson-developer-cloud/alchemylanguage-nodejs">Deploy on Bluemix</div>
+        <div class="_demo--banner bottom-banner ">
+            <div class="footer-banner">
+                <div class="_demo--container footer-container">
+                    <div class="footer-title">Next Up: Build your own app</div>
+                    <div class="footer-tagline">Use AlchemyLanguage to get started.</div>
+                    <a href="https://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/alchemy-language/api/v1/" target="_blank" class="base--a bottom-links">API Reference</a>
+                    <a href="https://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/alchemy-language.html" target="_blank" class="base--a bottom-links">Documentation</a>
+                    <a href="https://github.com/watson-developer-cloud/alchemylanguage-nodejs" target="_blank" class="base--a bottom-links">Fork on Github</a>
+                    <a href="https://bluemix.net/deploy?repository=https://github.com/watson-developer-cloud/alchemylanguage-nodejs" target="_blank" class="base--a bottom-links">Deploy on Bluemix</a></div>
+            </div>
         </div>
-      </div>
-    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
     <script type="text/html" id="entitiesTemplate">
