--- a/views/index.ejs
+++ b/views/index.ejs
@@ -197,7 +197,8 @@
               </p>
 
               <div class="btn-all-container">
-                <div class="base--p right-float"><span class="icon"><img src="images/icons/code.svg" alt="View JSON"></span>
+                <div class="base--p right-float">
+                  <span class="icon icon-code"></span>
                   <span class="base--a json-btn" target="39" href="">View JSON</span>
                 </div>
               </div>
@@ -478,6 +479,7 @@
               </p>
               <div class="btn-all-container">
                 <div class="base--p right-float">
+                  <span class="icon icon-code"></span>
                   <span class="base--a json-btn" target="54" href="">View JSON</span>
                 </div>
               </div>
@@ -600,6 +602,7 @@
                 Extracts the publication date from a webpage or HTML document. </p>
               <div class="btn-all-container">
                 <div class="base--p right-float">
+                  <span class="icon icon-code"></span>
                   <span class="base--a json-btn" target="48" href="">View JSON</span>
                 </div>
               </div>
