--- a/public/css/app.css
+++ b/public/css/app.css
@@ -108,7 +108,8 @@
 .btn-all-results-entities,
 .btn-all-results-concepts,
 .btn-all-results-targetsentiment,
-.btn-all-results-relations {
+.btn-all-results-relations,
+.btn-all-results-typedrelations {
   cursor: pointer;
   color: #435D7E;
   text-decoration: underline;
@@ -120,15 +121,37 @@
   display: block;
 }
 
+.resultscontainter {
+    border: 1px solid #d5d6d5;
+    margin-bottom: 20px;
+}
 .nested-relations {
   font-size: .9em;
 }
 
+input, select {
+    margin-top: -5px;
+}
+.choose-header {
+  font-size: 2em;
+  font-weight: 400;
+  margin-bottom: 5px;
+}
 .output-header-tagline {
   font-size: .9em;
   margin-top: 5px;
   padding-left: 1em;
   padding-right: 1em;
+}
+.options {
+    font-size: 1em;
+    margin-right: 20px;
+    color: #5a5a5a;
+}
+
+
+.base--h2 {
+    font-size: 2.48em;
 }
 
 .icon-hyperlink {
@@ -159,6 +182,10 @@
 .hiden-relation {
   display: none;
 }
+.breaktext {
+  word-wrap: break-word;
+}
+
 
 .content-relations {
   background: #ffffff;
@@ -180,6 +207,7 @@
 #div11,
 #div12,
 #div13,
+#div20,
 .base--table,
 #div14,
 .banner--row {
@@ -211,10 +239,12 @@
 
 .base--a:visited {
   color: #435D7E;
+
 }
 
 .base--a {
   color: #435D7E;
+
 }
 
 .relations-headline {
@@ -228,24 +258,25 @@
 }
 
 .bottom-links {
-    margin-right: 1.5em;
-    float: left;
-    border: 2px solid #000;
-    padding: 0.5em 2em;
-    color: #2E2E2E;
-    font-weight: bold;
-    background-color: #F4F4F4;
-    cursor: pointer;
-    transition: background-color 1s ease 0s;
-  }
+  margin-right: 1.5em;
+  float: left;
+  border: 2px solid black;
+  padding: .5em 2em .5em 2em;
+  color: #2e2e2e;
+  font-weight: bold;
+  background-color: #f4f4f4;
+  cursor: pointer;
+  -webkit-transition: background-color 1s;
+  -moz-transition: background-color 1s;
+  -ms-transition: background-color 1s;
+  -o-transition: background-color 1s;
+  transition: background-color 1s;
+  text-decoration: none;
+}
 
 .bottom-links:hover {
   background-color: #2e2e2e;
   color: white;
-}
-.bottom-links.base--a {
-    color: #2E2E2E;
-    text-decoration: none;
 }
 
 img.icons {
@@ -319,12 +350,10 @@ img.icons {
   border-top: 2px solid #ececec;
   display: block;
 }
-
 .error {
     color: red;
     margin-bottom: 1em;
 }
-
 @media (max-width: 700px) {
   .left-box {
     width: 100%;
