--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
                 </li>
                 <li class="base--li heading-nav--li" role="presentation">
                     <a class="heading-nav--item" href="https://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/starter-kits.html" target="_blank" role="menuitem">
-						App Gallery
+						Starter Kits
 					</a>
                 </li>
                 <li class="base--li heading-nav--li" role="presentation">
