css to scss  for custom styles update

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-.container {
+/*.container {
     width: auto;
     border-top: 1px solid #D6D7D6;
     padding-top: 20px;
@@ -318,4 +318,4 @@ img.icons {
     .right-float {
         width: 100%;
     }
-}
+}*/
