--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,3 +22,7 @@
 // Layouts
 //////////////////////////////
 @import 'layouts/index';
+//////////////////////////////
+// Layouts
+//////////////////////////////
+@import 'custom/index';
