--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>AlchemyLanguage | IBM Watson Developer Cloud</title>
     <meta charset="utf-8">
@@ -13,6 +14,7 @@
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <!-- top level heading -->
     <header class="_demo--heading">
@@ -94,29 +96,30 @@
     <div class="_demo--container">
         <article class="_content base--article">
             <h2 class="base--h2">Choose a model</h2>
-            <p class="base--p">AlchemyAPI is trained on billions of webpages and can detect and extract information such as concepts, entities, sentiment, and keywords. Alternatively, you can train a <a href="https://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/doc/alchemylanguage/customizing.shtml" class="base--a" target="_blank"> custom model</a> to identify specific entities and typed relations that are
-                unique to your domain or industry, for example law or finance.
+            <p class="base--p">AlchemyAPI is trained on billions of webpages and can detect and extract information such as concepts, entities, sentiment, and keywords. Alternatively, you can train a <a href="https://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/doc/alchemylanguage/customizing.shtml"
+                    class="base--a" target="_blank"> custom model</a> to identify specific entities and typed relations that are unique to your domain or industry, for example law or finance.
                 <br>
 
-            <div>
-                <h2 class="base--p choose-header">Choose which model to try:
+                <div>
+                    <h2 class="base--p choose-header">Choose which model to try:
             </h2>
 
-                <label for="standard">
-                    <input type="radio" value="ac" checked="1" name="ac" id="standard"> <span class="options">Public Model</span>
-                </label>
+                    <label for="standard">
+                        <input type="radio" value="ac" checked="1" name="ac" id="standard"> <span class="options">Public Model</span>
+                    </label>
 
-                <label for="custom">
-                    <input type="radio" value="ac" name="ac" class="model" id="custom"> <span class="options">Custom Model (Traffic Incident Report)</span>
-                    <input class="int-hide" id="model" type="text" value="ie-en-news">
-                </label>
+                    <label for="custom">
+                        <input type="radio" value="ac" name="ac" class="model" id="custom"> <span class="options">Custom Model (Traffic Incident Report)</span>
+                        <input class="int-hide" id="model" type="text" value="ie-en-news">
+                    </label>
 
-                <div class="base--p standard-desc">
-                  The default <a href="https://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/doc/alchemylanguage/" class="base--a" target="_blank"> public model</a> is trained with English websites and news content.
-                </div>
-                <div class="base--p custom-desc int-hide">
-                  The example <a href="https://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/doc/alchemylanguage/customizing.shtml" class="base--a" target="_blank"> custom model</a> is trained on traffic incident reports, and will find specific entities in text such as part of car, accident outcome, or impact instead of merely understanding general entities like automobile. </p>
-                </div>
+                    <div class="base--p standard-desc">
+                        The default <a href="https://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/doc/alchemylanguage/" class="base--a" target="_blank"> public model</a> is trained with English websites and news content.
+                    </div>
+                    <div class="base--p custom-desc int-hide">
+                        The example <a href="https://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/doc/alchemylanguage/customizing.shtml" class="base--a" target="_blank"> custom model</a> is trained on traffic incident reports, and will find
+                        specific entities in text such as part of car, accident outcome, or impact instead of merely understanding general entities like automobile. </p>
+            </div>
             </div>
             <div class="input-panel">
                 <h2 class="base--h2">Analyze Text</h2>
@@ -133,7 +136,11 @@
                     </ul>
                     <div class="tab-panels--tab-content">
                         <div id="panel1" class="tab-panels--tab-pane active" role="tab-panel">
-                            <textarea class="js-input-section--text-area base--textarea input--text" style="height: 270px">In 2009, Elliot Turner launched AlchemyAPI to process the written word, with all of its quirks and nuances, and got immediate traction. That first month, the company's eponymous language-analysis API processed 500,000 transactions. Today it's processing three billion transactions a month, or about 1,200 a second. “That's a growth rate of 6,000 times over three years,” touts Turner. “Context is super-important,” he adds. “'I'm dying' is a lot different than 'I'm dying to buy the new iPhone.'” “As we move into new markets, we're going to be making some new hires," Turner says. "We knocked down some walls and added 2,000 square feet to our office.” “We're providing the ability to translate human language in the form of web pages and documents into actionable data,” Turner says. Clients include Walmart, PR Newswire and numerous publishers and advertising networks. “This allows a news organization to detect what a person likes to read about,” says Turner of publishers and advertisers.</textarea>
+                            <textarea class="js-input-section--text-area base--textarea input--text" style="height: 270px">In 2009, Elliot Turner launched AlchemyAPI to process the written word, with all of its quirks and nuances, and got immediate traction. That first month, the company's eponymous language-analysis API processed 500,000 transactions.
+                                Today it's processing three billion transactions a month, or about 1,200 a second. “That's a growth rate of 6,000 times over three years,” touts Turner. “Context is super-important,” he adds. “'I'm dying' is a lot different
+                                than 'I'm dying to buy the new iPhone.'” “As we move into new markets, we're going to be making some new hires," Turner says. "We knocked down some walls and added 2,000 square feet to our office.” “We're providing the
+                                ability to translate human language in the form of web pages and documents into actionable data,” Turner says. Clients include Walmart, PR Newswire and numerous publishers and advertising networks. “This allows a news organization
+                                to detect what a person likes to read about,” says Turner of publishers and advertisers.</textarea>
                         </div>
 
                         <div id="panel2" class="tab-panels--tab-pane " role="tab-panel">
@@ -343,7 +350,8 @@
 
                         <div id="div20" class="1-result int-hide">
                             <h3 class="base--h3">Typed Relations</h3>
-                            <p class="output-header-tagline">Identifies different types of relations between detected entities, including user-defined relations from custom models that you can create with Watson Knowledge Studio. For example, the entities "Nobel Prize" and "Albert Einstein" may be linked by an "awardedTo" relation.</p>
+                            <p class="output-header-tagline">Identifies different types of relations between detected entities, including user-defined relations from custom models that you can create with Watson Knowledge Studio. For example, the entities "Nobel Prize" and "Albert Einstein"
+                                may be linked by an "awardedTo" relation.</p>
                             <div class="btn-all-container">
                                 <div class="base--p right-float"><span class="icon icon-code"></span>
                                     <span class="base--a json-btn" target="52" href="">View JSON</span>
@@ -541,7 +549,7 @@
                             </p>
                             <div class="btn-all-container">
                                 <div class="base--p right-float">
-                                  <span class="icon icon-code"></span>
+                                    <span class="icon icon-code"></span>
                                     <span class="base--a json-btn" target="54" href="">View JSON</span>
                                 </div>
                             </div>
@@ -664,7 +672,7 @@
                                 Extracts the publication date from a webpage or HTML document. </p>
                             <div class="btn-all-container">
                                 <div class="base--p right-float">
-                                  <span class="icon icon-code"></span>
+                                    <span class="icon icon-code"></span>
                                     <span class="base--a json-btn" target="48" href="">View JSON</span>
                                 </div>
                             </div>
@@ -695,16 +703,16 @@
 
         </div>
         <div class="_demo--banner bottom-banner">
-                    <div class="footer-banner">
-                        <div class="_demo--container footer-container">
-                            <div class="footer-title">Next Up: Build your own app</div>
-                            <div class="footer-tagline">Use AlchemyLanguage to get started.</div>
-                            <a href="https://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/alchemy-language/api/v1/" target="_blank" class="bottom-links">API Reference</a>
-                            <a href="https://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/alchemy-language.html" target="_blank" class="bottom-links">Documentation</a>
-                            <a href="https://github.com/watson-developer-cloud/alchemylanguage-nodejs" target="_blank" class="bottom-links">Fork on Github</a>
-                            <a href="https://bluemix.net/deploy?repository=https://github.com/watson-developer-cloud/alchemylanguage-nodejs" target="_blank" class="bottom-links">Deploy on Bluemix</a></div>
-                    </div>
-                </div>
+            <div class="footer-banner">
+                <div class="_demo--container footer-container">
+                    <div class="footer-title">Next Up: Build your own app</div>
+                    <div class="footer-tagline">Use AlchemyLanguage to get started.</div>
+                    <a href="https://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/alchemy-language/api/v1/" target="_blank" class="bottom-links">API Reference</a>
+                    <a href="https://www.ibm.com/smarterplanet/us/en/ibmwatson/developercloud/alchemy-language.html" target="_blank" class="bottom-links">Documentation</a>
+                    <a href="https://github.com/watson-developer-cloud/alchemylanguage-nodejs" target="_blank" class="bottom-links">Fork on Github</a>
+                    <a href="https://bluemix.net/deploy?repository=https://github.com/watson-developer-cloud/alchemylanguage-nodejs" target="_blank" class="bottom-links">Deploy on Bluemix</a></div>
+            </div>
+        </div>
 
         <script type="text/html" id="typedRelationsTemplate">
             <% _.each(items, function(item, key, list) { %>
@@ -747,7 +755,7 @@
                                     <%=arguments.text  %>
                                 </td>
 
-                                <td  class="base--td">
+                                <td class="base--td">
                                     <%=arguments.part %>
                                 </td>
                                 <td class="base--td"></td>
@@ -804,9 +812,8 @@
                     <td class="base--td">
                         <%= item.type %>
                     </td>
-
                 </tr>
-                <% }); %>
+            <% }); %>
         </script>
 
 
@@ -1182,4 +1189,5 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
         <script type="text/javascript" src="js/demo.js"></script>
 </body>
+
 </html>
