removed default model

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -110,7 +110,7 @@
 
                     <label for="custom">
                         <input type="radio" value="ac" name="ac" class="model" id="custom"> <span class="options">Custom Model (Traffic Incident Report)</span>
-                        <input class="int-hide" id="model" type="text" value="ie-en-news">
+                        <input class="int-hide" id="model" type="text" value="en-us-tir">
                     </label>
 
                     <div class="base--p standard-desc">
