added targeted emotion

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -188,6 +188,9 @@
                         <div id="t6" target="3" class="ml-item">
                             Document Emotion
                         </div>
+                        <div id="t35" target="15" class="ml-item">
+                            Targeted Emotion
+                        </div>
                         <div id="t7" target="4" class="ml-item">
                             Document Sentiment
                         </div>
@@ -311,6 +314,35 @@
 
                                 </tbody>
                             </table>
+
+                        </div>
+
+                        <div id="div15" class="1-result int-hide">
+                            <h3 class="base--h3">Targeted Emotion</h3>
+                            <p class="output-header-tagline">
+                                Extracts emotions targeted towards a specific "target phrase".
+                            </p>
+                            <div class="btn-all-container">
+                                <div class="base--p right-float"><span class="icon icon-code"></span>
+                                    <span class="base--a json-btn" target="54" href="">View JSON</span>
+                                </div>
+                            </div>
+                            <div id="json54" class="input--API base--code int-hide">
+                                <pre class="API--json">
+                                    <code id="targeted-emotion-API-data" class="language-javascript ">
+                                    </code>
+                                  </pre>
+                            </div>
+                            <table class="base--table">
+                                <div class="base--tbody targetedemotion-table">
+
+                                </div>
+                            </table>
+
+                            <div class="btn-all-container">
+                                <div class="btn-all-results-targetedemotion arrowdown-main btn-results" href="#">View all results</div>
+
+                            </div>
 
                         </div>
 
@@ -812,6 +844,66 @@
             <% }); %>
         </script>
 
+        <script type="text/html" id="targetedemotionTemplate">
+<% _.each(items, function(item, key, list) { %>
+<table class="base--table targetedemotion resultscontainter">
+
+                    <thead class="base--thead" style="border-bottom: 0;">
+                        <tr class="base--tr">
+                            <td class="base--td">Target Phrase</td>
+                            <td class="base--td"></td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="base--td">
+                                <%= item.text %>
+                            </td>
+                            <td class="base--td"></td>
+                        </tr>
+                    </tbody>
+                        <thead class="base--thead base--thead nested-relations">
+                            <tr class="base--tr">
+                                <td class="base--td">Emotion</td>
+                                <td class="base--td">Score</td>
+                            </tr>
+                        </thead>
+                            <tbody>
+                              <tr class="base--tr">
+                                  <td class="base--td">Anger</td>
+                                  <td class="base--td">
+                                      <%= item.emotions.anger %>
+                                  </td>
+                              </tr>
+                              <tr class="base--tr">
+                                  <td class="base--td">Disgust</td>
+                                  <td class="base--td">
+                                      <%= item.emotions.disgust %>
+                                  </td>
+                              </tr>
+                              <tr class="base--tr">
+                                  <td class="base--td">Fear</td>
+                                  <td class="base--td">
+                                      <%= item.emotions.fear %>
+                                  </td>
+                              </tr>
+                              <tr class="base--tr">
+                                  <td class="base--td">Joy</td>
+                                  <td class="base--td">
+                                      <%= item.emotions.joy %>
+                                  </td>
+                              </tr>
+                              <tr class="base--tr">
+                                  <td class="base--td">Sadness</td>
+                                  <td class="base--td">
+                                      <%= item.emotions.sadness %>
+                                  </td>
+                              </tr>
+                                </tbody>
+                </table>
+
+<% }); %>
+        </script>
 
         <script type="text/html" id="emotionTemplate">
 
